# message_s

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
cipher/: cipher.h  generate_ssl_cert.cpp  get_ssl_cert_fingerprint.cpp  load_cert_key_from_disk.cpp  save_cert_key_to_disk.cpp
common/: common_types.h  global_variables.h
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.ru.md  SECURITY.md  identity  invite  stack  todo
html/: annotated.html  classes.html  classmessage__s_1_1contact.html  classmessage__s_1_1contact__db-members.html  classmessage__s_1_1contact__db.html  contact_8h_source.html  contacts__db_8h_source.html  dir_345a68f9a87d1131610c82c600aa15e6.html  dir_5985cd5a8ca13ff5fd7070ae2e9a0f5a.html  dir_5ba16e5674db0341f71f6402fd03a668.html  doxygen.css  files.html  functions.html  functions_func.html  index.html  namespacemessage__s.html  namespaces.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  classes_0.js  functions_1.js  functions_3.js  search.css  searchdata.js
message_s/includes/: contact.h  contacts_db.h
message_s/sources/: contacts_db.cpp
tests/: main_tests.cpp
utils/: puke.cpp  utils.h
